--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,1 +1,24 @@
+### 본인이 주력으로 사용하는 언어에서 설계적 결함 한 가지를 작성해주세요.
 
+자바의 설계적 결함 중 한 가지는 Generic 타입을 Runtime에 활용할 수 없다는 것이다.
+
+예를들어,
+
+```java
+public class MyClass<E> {
+    public static void myMethod(Object item) {
+        if (item instanceof E) {  //Compiler error
+            ...
+        }
+        E item2 = new E();   //Compiler error
+        E[] iArray = new E[10]; //Compiler error
+    }
+}
+
+```
+
+다음 코드들은 성립될 수 없다.
+
+이는 제네릭이 비구체화 타입이기 때문인데, 비구체화 타입은 **런타임에 소거가되기 때문에 컴파일 타임보다 정보를 적게 가진다.** 적, 컴파일 타임에 타입 체크를 하고 런타임에는 타입을 지운다는 말이다.
+
+때문에 instanceof, new 등의 연산자도 사용할 수 없다.
