--- a/5번 문제.md
+++ b/5번 문제.md
@@ -1,1 +1,46 @@
+### 본인이 주력으로 사용하는 언어에서 자료구조와 관련 된 클래스가 내부적으로 어떻게 동작하는지 한 가지 사례를 정하여 작성해주세요.
 
+#### Java Hashmap 동작원리
+
+Hashmap은 key,value가 1:1로 매핑되는 자료구조로 key는 중복을 허용하지 않는다.
+
+```java
+ static class Entry<K,V> implements Map.Entry<K,V>
+ {
+     final K key;
+     V value;
+     Entry<K,V> next;
+     final int hash;
+     ........
+ }
+```
+
+HashMap은 Entry(Node) class를 내부 클래스에 저장한다. 그래서 put 메소드를 살펴보면
+
+1. 먼저 키가 null인지 확인하고 hashcode 메소드로 hashcode를 적용한다. 배열의 한도 내에서 값을 얻기 위해 일부 시프팅 연산을 수행한다.(키가 null이면 hashcode가 0이기 때문에 위치 0에 저장한다.)
+2. indexFor로 Entry 객체를 저장할 위치를 가져온다.
+3. 만약 두 개의 다른 객체가 hashcode를 가지면 충돌이 일어나기 때문에 next로 처리해준다.
+4. 충돌이나면 next 속성 값을 체크하고 만약 null이면 그 위치에 Entry 객체를 넣고, null이 아니면 next 객체의 next를 다시 불러 null일 때까지 확인하고 객체를 저장한다.
+
+```java
+public V put(K key, V value) {
+    if (key == null)
+       return putForNullKey(value);
+
+    int hash = hash(key.hashcode());
+    int i = indexFor(hash, table.length);
+
+    for (Entry<K,V> e = table[i]; e != null; e = e.next){
+        Object k;
+        if (e.hash == hash && ((k = e.key) == key || key.equals(k))){
+             V oldValue = e.value;
+             e.value = value;
+             e.recordAccess(this);
+             return oldValue;
+          }
+     }
+     modCount++;
+     addEntry(hash, key, value, i);
+     return null;
+ }
+```
