--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,1 +1,16 @@
+### 동시에 같은 DB Table row 를 업데이트 하는 상황을 방어하기 위해 어떻게 개발할 것인가?
 
+각 작업 세션이 겹치지 않도록 lock을 걸어 해결할 것이다. 
+
+DB의 격리수준(Isolation level)에는 총 4가지 있는데
+- Read Uncommitted
+- Read Committed
+- Repeatable Read
+- Serializable
+기본적으로 Read Committed 격리 수준을 가진다. 하지만, JPA를 사용했을 때는 한 번 영속 컨텍스트에 적재된 엔티티를 조회하므로 Repeatable Read 수준과 동일하게 동작한다.
+
+때문에, 낙관적 lock의 경우와 비관적 lock의 경우를 고려하여 개발할 필요가 있다.
+
+보통 낙관적 lock의 경우는 **@Version 어노테이션**으로 version 칼럼을 명시하여 update 간 해당 칼럼을 +1 씩 갱신한다. (트랜잭션 간 update 대상의 version 칼럼 대에터가 영속객체의 version 데이터와 다르면 Exception을 발생시키는 방식이다.)
+
+비관적 lock의 경우 --for update(ex. mysql) 와 같은 방식의 쿼리로 lock을 요청하는 방식이다.
