--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,19 @@
 
+### TCP 와 UDP 의 차이를 작성해주세요.
+
+TCP, UDP 모두 데이터를 전송하기 위한 프로토콜로 OSI 7계층의 전송 계층에 속한다.
+
+#### TCP
+TCP는 메세지의 형태로 보내기 위해 **IP**와 함께 사용되며, 인터넷 환경에서 기본으로 사용된다.
+
+TCP는 신뢰성이 중요하기 때문에 3-way handshaking을 통해 세션을 수립한다. 때문에 데이터의 흐름제어(순서가 보장된다.)나 혼잡제어가 가능하다. 때문에 각 패킷에 대한 응답을 해야하는 과정들을 거치게 되고 이로인해 시간지연이나 CPU 소모가 있는 편이다. 
+
+
+#### UDP
+UDP는 데이터를 데이터 그램 단위로 처리한다. 주로 streaming과 같은 실시간 서비스에서 사용된다.
+
+UDP는 신뢰성보다는 연속성이 중요하기 때문에 연결을 설정하고 해제하는 과정이 없다. 서로 다른 경로로 독립적으로 처리하며 패킷에 순서를 부여하거나 재조립할 필요도 없기때문에 TCP보다 속도도 빠르다. 하지만, 데이터에 신뢰성을 보장하지는 못한다.
+
+
+
+![image](https://user-images.githubusercontent.com/31172248/193560128-bc8b5a9c-efb3-421f-ba11-989a754264cd.png)
