--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,1 +1,11 @@
 
+### 웹 브라우저에 네이버 를 검색하고 화면에 네이버 화면이 출력이 될 때 까지 내부적으로 어떤 동작들이 수행이 되는지 설명해주세요.
+
+
+1. naver의 url의 도메인 네임에 대한 ip 주소를 요청하게된다. (DNS에)
+2. 획득한 ip에 해당하는 페이지를 달라고 요청한다. (HTTP request)
+3. tcp 통신을 통해 해당 ip의 네이버 서버에 요청한다.
+4. 네이버 서버는 http 요청을 받게되고 웹서버에서 해당 페이지 데이터를 response 한다.
+5. 이 response도 물론 http 응답 메세지의 형태로 만들어져 오게된다.
+6. 이 응답을 해석해 html 문서를 받아 브라우저에 넣게 되고
+7. 브라우저는 반환받은 html 데이터를 파싱해 처리한다.
